@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-07-27T16:16:50Z",
-  "count_outdated" : 419,
-  "uniques_outdated" : 226,
-  "count" : 442,
+  "timestamp" : "2022-07-28T01:04:27Z",
+  "count_outdated" : 421,
+  "uniques_outdated" : 227,
+  "count" : 443,
   "uniques" : 238,
   "clones" : [
-    {
-      "timestamp": "2022-07-13T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-07-14T00:00:00Z",
       "count": 1,
